--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,9 @@
                 <form id="code-form">
                     <div class="mb-3">
                         <label for="language" class="form-label">Select Language</label>
-                        <select id="language" class="form-select" name="language">
+                         <select id="language" class="form-select" name="language">
                             <option value="python">Python</option>
+                            <option value="java">Java</option>
                             <!-- Add more language options here -->
                         </select>
                     </div>
